# beacon

./: .gitignore  BQN.wasm  Cargo.toml  README.md  build.rs  flake.nix  libcbqn.dylib
.github/workflows/: compile.yml
assets/: bqn@2x.icns
src/: k.rs  main.rs  save.rs  styles.rs  text_input.rs  utils.rs  wrap.rs
src/docs/: content.rs
src/docs/mds/: 2-modifierrightoperand.md  README.md  absolutevalue_modulus.md  after_bind.md  assert_assertwithmessage.md  atop.md  before_bind.md  beginarray.md  beginblock.md  beginexpression.md  beginlist.md  catch.md  ceiling_maximum.md  cells.md  change.md  character.md  choose.md  classify_indexof.md  comment.md  conjugate_add.md  constant.md  currentfunction.md  currentmodifier.md  deduplicate_find.md  define.md  depth.md  depth_match.md  deshape_reshape.md  each.md  enclose_lessthan.md  endarray.md  endblock.md  endexpression.md  endlist.md  enlist_pair.md  exponential_power.md  export.md  first_pick.md  firstcell_select.md  floor_minimum.md  (+58 more)
src/text_input/: cursor.rs  editor.rs
src/views/: mod.rs  pane.rs  tabs.rs  toolbar.rs
src/widgets/: mod.rs  text_input.rs  wrap.rs
src/widgets/text_input/: cursor.rs  editor.rs  value.rs
